<resources>
    <string name="app_name">Football Club</string>
    <string name="vs">VS</string>
    <string name="prev_match">Previous Match</string>
    <string name="next_match">Next Match</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitute">Substitute</string>
    <string name="favorites">Favorites</string>
    <string name="football_club">Football Club</string>
    <string name="added_to_fav">Added to favorite</string>
    <string name="removed_from_fav">Removed from favorite</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="see_prev_match">See Previous Match</string>
    <string name="overview">Overview</string>
    <string name="search">Search</string>
    <string name="favorite_matches">Favorite Matches</string>
    <string name="favorite_clubs">Favorite Clubs</string>
    <string name="player">Player</string>
</resources>
